#navbar display:flex 적용해서 구성해보기.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
         <title>에어비엔비: 클론코딩</title>
     </head>
     <body>
-        <div id="header">
-           <a href="index.html"> <img src="Image/homeImg.png" alt="homeImg"></a>
-        </div>
-        <div>
-           <input type="text" class="search">
-        </div>
+        <header class="header">
+            <div class="logo" >
+                <a href="index.html" class=main_icons> <img src="Image/homeImg.png" alt="homeImg"></a>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="search.." title="검색" class="search_input">
+                <button type="button" class="search_button">아이콘 넣엉</button>
+            </div>
+             <div class="host">
+                 <a href="">호스트 되기</a>
+                 <a href="">지구본<img src="" alt=""></a>
+                 <button>navigaion bar로 변화는 btn</button>
+             </div>
+        </header>
         <div id="top">
             <h3>어디든 상관없이 떠나고 싶을 때 에어비앤비가 도와드립니다!</h3>
             <br>
