--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
                 <a href="index.html" class=main_icons> <img src="Image/homeImg.png" alt="homeImg"></a>
             </div>
             <div class="search">
-                <input type="text" placeholder="search.." title="검색" class="search_input">
-                <button type="button" class="search_button">아이콘 넣엉</button>
+                <input type="text" placeholder="검색 시작하기" title="검색" class="search_input">
             </div>
              <div class="host">
                  <a href="">호스트 되기</a>
-                 <a href="">지구본<img src="" alt=""></a>
-                 <button>navigaion bar로 변화는 btn</button>
+                 <a href=""><img src="Image/earth.png" alt=""></a>
+                 <input type="button" class="left_btn"></input>
              </div>
         </header>
         <div id="top">
