--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <body>
         <header class="header">
             <div class="logo" >
-                <a href="index.html" class=main_icons> <img src="Image/homeImg.png" alt="homeImg"></a>
-            </div>
-            <div class="search">
-                <input type="text" placeholder="검색 시작하기" title="검색" class="search_input">
+                <a href="index.html" class=main_icons> <img src="Image/logo.PNG" alt="homeImg"></a>
             </div>
              <div class="host">
-                 <a href="">호스트 되기</a>
-                 <a href=""><img src="Image/earth.png" alt=""></a>
-                 <input type="button" class="left_btn"></input>
+                 <a href="" class="header_host">호스트 되기</a>
+                 <button class="header_host">
+                     <img src="Image/earth.png" alt="host_logo">
+                </button>
+                <button class="header_host">
+                    <img src="Image/hambuger_logo.svg" alt="hambuger_logo">
+                    <img src="Image/user_logo.svg" alt="user_logo">
+               </button>
              </div>
         </header>
         <div id="top">
