--- a/index.html
+++ b/index.html
@@ -12,23 +12,27 @@
     <body>
         <header class="header">
             <div class="logo" >
-                <a href="index.html" class=main_icons> <img src="Image/logo.PNG" alt="homeImg"></a>
+                <a href="index.html" class=main_icons> <img src="Image/logo.PNG" alt="homeImg"/></a>
             </div>
-             <div class="host">
+             <div class="left_nav">
                  <a href="" class="header_host">호스트 되기</a>
                  <button class="header_host">
-                     <img src="Image/earth.png" alt="host_logo">
+                     <img src="Image/earth.png" alt="host_logo"/>
                 </button>
                 <button class="header_host">
-                    <img src="Image/hambuger_logo.svg" alt="hambuger_logo">
-                    <img src="Image/user_logo.svg" alt="user_logo">
+                    <img src="Image/hambuger_logo.svg" alt="hambuger_logo"/>
+                    <img src="Image/user_logo.svg" alt="user_logo"/>
                </button>
              </div>
         </header>
-        <div id="top">
-            <h3>어디든 상관없이 떠나고 싶을 때 에어비앤비가 도와드립니다!</h3>
-            <br>
-            <button>유연한 검색</button>
+        <div class="top">
+                <h1>온라인 체험</h1>
+                <br>
+                <div>
+                    개성 있는 호스트가 진행하는 특별한 활동에
+                    참여하면서 이제 집에서도 안전하게 체험을 
+                    즐기실 수 있습니다.
+                </div>
         </div>
         <!--test-->
 
