--- a/index.html
+++ b/index.html
@@ -25,15 +25,33 @@
                </button>
              </div>
         </header>
-        <div class="top">
-                <h1>온라인 체험</h1>
-                <br>
-                <div>
-                    개성 있는 호스트가 진행하는 특별한 활동에
-                    참여하면서 이제 집에서도 안전하게 체험을 
-                    즐기실 수 있습니다.
-                </div>
-        </div>
+        <nav class="navbar">
+            <div class="first_navbar">
+                <button class="header_host">
+                    <img src="" alt="">
+                    필터
+                </button>
+                <button class="header_host">날짜</button>
+                <button class="header_host">일행당 인원수</button>
+            </div>
+            <div class="vertical_line">
+            </div>
+            <div class="left_nav">
+                <button class="header_host">단체로 즐기기에 적합</button>
+                <button class="header_host">가족이 즐기기에 적합</button>
+                <button class="header_host">동물</button>
+                <button class="header_host">예술 및 글쓰기</button>
+                <button class="header_host">베이킹</button>
+                <button class="header_host">쿠킹</button>
+                <button class="header_host">댄스</button>
+                <button class="header_host">음주</button>
+                <button class="header_host">엔터테이먼트</button>
+                <button class="header_host">피트니스</button>
+
+            </div>
+
+
+        </nav>
         <!--test-->
 
     </body>
